--- a/style.css
+++ b/style.css
@@ -214,6 +214,11 @@ ul {
 .btn-shadow {
   box-shadow: var(--box-shadow);
 }
+body{
+  width: 100%;
+  background: url(./assets/backgroundpng.png) no-repeat;
+  background-size: cover;
+}
 /*===== global classes===== */
 /*===== media query===== */
 /* for large screen sm (640px) */
@@ -261,6 +266,8 @@ ul {
   }
   #nav {
     flex-direction: row !important;
+    padding-left: 6rem !important;
+    padding-right: 6rem !important;
   }
   .collapse {
     max-height: initial !important;
